// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->Close slot
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right" data-akar-collection-item="">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;
